<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">德州面对面</string>
    <string name="title_activity_seat_view">SeatView</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="person_state">状态</string>
    <string name="player_current_rank">当前排名</string>
    <string name="player_current_rank_til">名</string>
    <string name="quit">弃牌</string>
    <string name="follow">跟注</string>
    <string name="add">加注</string>
    <string name="tips">牌型</string>
    <string name="autopass">自动让牌</string>
    <string name="autopq">让或弃</string>
    <string name="autofollow">跟任何注</string>
    <string name="sidepool_txt">2000</string>
    <string name="title_activity_room_create">RoomCreateActivity</string>
    <string name="waiting_people">等待其他玩家进入...</string>
    <string name="start_game">开始游戏</string>
    <string name="fill_people">人满喇，开台啦扑街</string>
    <string name="throw_people">要开台就要向房主扔肥皂喔</string>

    <!-- 设置 -->
    <string name="voice">声音</string>
    <string name="shock">震动</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="about_content1">德州面对面  Version: 1.0(201410)</string>
    <string name="about_content2">copyright(C) 2014 德州狗 All Rights Reserved</string>
    <string name="help_play_txt">在牌局开始的时候， 每个玩家分得两张底牌（仅自己可见）， 系统会分三次陆续发出五张公共牌（3张+1张+1张）。 从每个玩家的底牌和公共牌（共7张）中， 选出组合最大牌型的5张（可能出现0+5的组合， 即公共牌最大）， 与其他玩家的最大牌型进行比较， 决出胜负。 </string>
    <string name="help_allocate_txt">德州扑克的奖池是指每个玩家投入到牌局中的筹码， 玩家跟注、 加注、 全下都需要将自己手里一定数量的筹码投入到奖池。 德州扑克的奖池分主池和边池， 如果每个玩家下的筹码一样多， 那就只有一个主池， 否则就会产生边池。 当有人全下(All In)时， 就会出现边池。 摊牌后， All In者如获胜， 则只参与主池分配。 </string>
    
    <!-- wo -->
    <string name="best_cardtype">最牛牌型</string>
    <string name="nickname">昵称</string>
    <string name="victory">胜局</string>
    <string name="combat">战斗力</string>
    <string name="confirm">确定</string>
    <string name="edit">编辑</string>
    <string name="title_activity_rank">RankActivity</string>
    <string name="snapshot_txt">截图保存</string>
    <string name="close_txt">关闭</string>
    <string name="innings_txt">限时局：50/50局</string>
    <string name="rank_player_name_txt">呵呵呵呵呵</string>
    <string name="rank_player_money_txt">筹码：99999</string>
    <string name="good_cards_each_title_txt">葫芦赢</string>
    <string name="good_cards_each_money_txt">3600</string>
    <string name="good_cards_snapshot_txt">截图保存</string>
    <string name="good_cards_close_txt">关闭</string>
    <string name="title_activity_punish">PunishActivity</string>
    <string name="punishment_txt">你这么聪明，你爸妈造吗？滚粗。。。。。。</string>
    <string name="punishment_begin_txt">开始</string>
    <string name="punishment_close_txt">关闭</string>
    <string name="player_name">逗比</string>
    <string name="player_action_txt">投注2000</string>
    <string name="bet_txt">30000</string>
    <string name="me_action_txt">加注1000</string>
    <string name="me_name_txt">逗比</string>
    <string name="me_money_txt">3500</string>
    <string name="game_mypoker_type_txt">皇家同花順</string>
    <string name="game_maincool_chip_txt">100000</string>
    <string name="game_sidecool_chip_txt">100000</string>
    <string name="title_activity_waiting">WaitingActivity</string>
    
    <!-- dengdai -->
    <string name="waiting_title_txt">为了部落而战！</string>
    <string name="waiting_players_name">逗比</string>

    <!-- 创建房间 -->
    <string name="digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ </string>
    
</resources>
