<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0000000"
    android:clickable="true"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/setting_bg"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/setting_bg" />

    <ImageView
        android:id="@+id/setting_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/setting_bg"
        android:layout_marginBottom="-26dp"
        android:layout_marginLeft="-50dp"
        android:layout_toRightOf="@+id/setting_bg"
        android:background="@drawable/setting_close" />

    <LinearLayout
        android:id="@+id/setting_items_layout"
        android:layout_width="300dp"
        android:layout_height="184dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/voice_item_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0.5dp"
            android:background="@drawable/setting_items_bg_fillet_up"
            android:clickable="true" >

            <TextView
                android:id="@+id/voice_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/voice"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/voice_switch_img"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14dp"
                android:clickable="true"
                android:src="@drawable/setting_switch_on" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shock_item_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0.5dp"
            android:background="@drawable/setting_items_bg_no_fillet"
            android:clickable="true" >

            <TextView
                android:id="@+id/shock_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/shock"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/shock_switch_img"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14dp"
                android:clickable="true"
                android:src="@drawable/setting_switch_on" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/help_item_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0.5dp"
            android:background="@drawable/setting_items_bg_no_fillet"
            android:clickable="true" >

            <ImageView
                android:id="@+id/help_open_img"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="19dp"
                android:scaleType="fitEnd"
                android:src="@drawable/setting_open" />

            <TextView
                android:id="@+id/help_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_item_layout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0.5dp"
            android:background="@drawable/setting_items_bg_fillet_bottom"
            android:clickable="true" >

            <TextView
                android:id="@+id/about_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/about_open_img"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="19dp"
                android:scaleType="fitEnd"
                android:src="@drawable/setting_open" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>